--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         <div class="container py-5">
             <h1 class="display-3 text-white mb-3 animated slideInDown">Tansah</h1>
             <p class="text-white animated slideInDown">
-            kqeqweqwewqe 
+            sasa 
         </div>
     </div>
             
